# icub_matej

./: .gitignore  README.md
conf/: iCub_parts_activation.ini
doubleTouchMovementPrimitives/selfTouchPositionControlSequences/: CMakeLists.txt  readme.txt  selfTouchPosControlSeq.cpp
doubleTouchMovementPrimitives/selfTouchPositionControlSequences2/: CMakeLists.txt  selfTouchPosControlSeq.cpp
doubleTouchMovementPrimitives/selfTouchRightIndexToLeftForearmPositionControlSequence/: CMakeLists.txt  selfTouchRightIndexToLeftForearmPositionControlSequence.cpp
icubBabbling/cartesianSpaceBabbling/: CMakeLists.txt  main.cpp
icubBabbling/cartesianSpaceBabbling/app/scripts/: iCubSim_Log_LeftArm_Head_LeftEndEff.xml  iCubSim_Log_RightArm_Head_RightEndEff.xml
matlab/plotting_logs/: dataset_description_example.txt  load_and_plot_dataSet.m  load_and_plot_dataSet_newTimeOptions.m  load_and_plot_dataSet_newTimeOptions_newPaths.m  plot_tactile_comp.m
matlab/plotting_logs/palo/: load_and_plot_dataSet_doubleTouch_icubSim.m
matlab/skin/left_forearm/: SKIN_LEFT_FORARM.cpp  SKIN_LEFT_FORARM_v2 - kópia.cpp  SKIN_LEFT_FORARM_v2.cpp  SKIN_LEFT_FORARM_v3.cpp  SKIN_LEFT_FORARM_v4.cpp  Translation.m  merge.m  n_n.mat  plotTaxelPositions.m  skinTesselation3D_left_forearm.asv  skinTesselation3D_left_forearm.m  skin_emulation_cube_coordinates.txt
scripts/: iCubSim_Log_jointsAndSkin_tx_rx_time.xml  iCubSim_Log_tx_rx_time.xml  iCubSim_Log_tx_rx_time_Palo.xml  iCub_Log_tx_rx_time.xml  iCub_SIM2_withCollisionPrimitive2.xml  iCub_SIM2_withCollisionPrimitive2_iCubGUI.xml  icubSim_Startup.xml  icubSim_iCubGui_skinGuis.xml  icubSim_iCubGui_skinGuis_dataDumper_selfCollisions.xml  icubSim_iCubGui_skinGuis_doubleTouch.xml  icubSim_replaySkinAndJointsLog.xml
scripts/old/: iCub_SIM2_iCubGui_handSkinGuis_dataDumper.xml  iCub_SIM2_iCubGui_skinGuis_dataDumper.xml  iCub_SIM2_withCollisionPrimitiveHandToHand_iCubGUI_handSkinGui.xml  iCub_localSIM_iCubGui_skinGuis_dataDumper_selfCollisions.xml
(+14 files in other folders)
